# render_engine_proto

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  main.cpp
data/models/city-props-collection/: license.txt  scene.gltf
data/models/tokyo-city-scene/: attribution.txt
data/models/warthhog/: license.txt  scene.gltf
data/models/zelda-backpack/: license.txt  scene.gltf  scene_lod0.gltf
data/shaders/: Geometry.hlsl
exe/: CMakeLists.txt
exe/src/: main.cpp
lib/: CMakeLists.txt
lib/include/rde/: Core.hpp  Mesh.hpp  PackedArray.hpp  RenderEngine.hpp
lib/src/rde/: Core.cpp  Logging.hpp  RenderEngine.cpp
